Finished the model, repository and service layer tests. Updated the OrderReportDTOs to include @Data annotations and implemented a fix to the ReportService.getFilteredOrders method to accept null parameters. Finally, i refactored the directory structure to have all security related classes under one package, except for the AuthenticationService which is more closely related to the UserService class.